Infra/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mr-robot
  name: mr-robot-api-service
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: mr-robot
  type: LoadBalancer
